Add troubleshooting guide (#11)

--- a/_data/custom-sidenavs.yaml
+++ b/_data/custom-sidenavs.yaml
@@ -52,5 +52,7 @@ tags:
           url: "/docs/beamrunner/release/1.2.0/objstor"
         - page: "Performance considerations"
           url: "/docs/beamrunner/release/1.2.0/performance"
+        - page: "Troubleshooting"
+          url: "/docs/beamrunner/release/1.2.0/troubleshooting"
     - page: "Limitations and known issues"
       url: "/docs/beamrunner/release/1.2.0/issues"
